Always wrap children, some minor fixes

--- a/components/ui/Carousel/Carousel.module.scss
+++ b/components/ui/Carousel/Carousel.module.scss
@@ -1,16 +1,17 @@
 .root:not([class~='disabled']) {
     display: grid;
+    position: relative;
     overflow: hidden;
+}
 
-    .item {
-        grid-area: 1 / -1;
-        width: fit-content;
-        will-change: transform;
-        transform: translate3d(-200%, 0, 0);
-        user-select: none;
+.item {
+    grid-area: 1 / -1;
+    width: fit-content;
+    will-change: transform;
+    transform: translate3d(-99999px, 0, 0);
+    user-select: none;
 
-        img {
-            pointer-events: none;
-        }
+    img {
+        pointer-events: none;
     }
 }
